# minishell

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  minishell  minishell.h  test.tx
builtin/: builtin_utils.c  cd.c  echo.c  env.c  exit.c  export.c
get_next_line/: get_next_line.c  get_next_line.h
headers/: tokenization.h
includes/: ast.h  builtin.h  cd_path_utils.h  collections.h  daemon.h  error_codes.h  execution.h  expansion.h  get_next_line.h  hash_table.h  minishell.h  mux.h  node.h  path_utils.h  prompt.h  protocol.h  term_settings.h  tokenization.h  utils.h  validation.h
libs/: ._readline
libs/gnl/: get_next_line_utils.c
libs/libft/: CMakeLists.txt  Makefile  libft.h
libs/libft/src/: ft_atof.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprime.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putchar_n.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_split.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  (+16 more)
src/: .main.c.swp  ft_utils.c  main.c  minishell.c  node.c
src/ast/: ast.c  ast_deletion.c  ast_node_creation.c  ast_node_deletion.c  ast_node_utils.c  ast_print_module.c  ast_print_module_utils.c  ast_syntax_check.c  ast_utils.c
src/ast_tree/: ast_tree.c  ast_tree_node_utils.c  ast_tree_print_module.c
src/builtin/: echo.c  env.c  exit.c  export.c  pwd.c  unset.c
src/builtin/cd/: cd.c  cd_path_parser.c  cd_path_resolver.c  cd_path_utils.c
src/collections/: string.c
src/execution/: binary_helper.c  command_env_utils.c  command_helper.c  command_path_utils.c  execution.c  execution_binary_node.c  execution_command_node.c  execution_helper.c  execution_redir_node.c  execution_utils.c  redir_setup_cleanup.c  redir_utils.c
src/execution/expansion/: dollar_sign_expansion.c  dollar_sign_expansion_utils.c  expansion.c  expansion_utils.c  variable_expansion.c  variable_expansion_utils.c  wildcard.c  wildcard_utils.c
src/get_next_line/: get_next_line.c
src/hash_table/: hash_table.c  hash_table_utils.c
src/lexer/: tokenization.c
src/parsing/: ft_env_expansion.c  ft_env_expansion_utils.c  ft_env_pars.c  ft_parsing_utils.c  ft_syntax.c  ft_syntax_2.c
src/path_utils/: path_utils.c
src/prompt/: get_line_parenthesis.c  get_line_quotes.c  prompt.c  prompt_utils.c
src/term_settings/: signals.c  term_config.c
src/termux/: autostart.c  client.c  daemon.c  daemon_event_loop.c
src/tokenization/: ft_argment_quote_helper.c  ft_argument_manipulation.c  ft_argument_process.c  ft_argument_quote.c  ft_argument_utils.c  ft_exec_helper.c  ft_exec_pipe_helper.c  ft_exec_redir_helper.c  ft_exectuion_pipe.c  ft_execution.c  ft_execution_command.c  ft_execution_command2.c  ft_execution_errors.c  ft_execution_heredoc.c  ft_execution_redirections.c  ft_make_tree.c  ft_node_ctor_dtor.c  ft_syntax_node.c  ft_syntax_node_2.c  ft_syntax_tree.c  ft_syntax_tree_2.c  ft_syntax_tree_parse.c  ft_tok_utils.c  ft_tok_utils2.c  ft_tokenization.c  ft_tokenization_helper.c  ft_tree_node.c  quotes.c  token_utils.c  token_validation.c  tokenization.c  tokenization_node_creation.c  tokenization_node_creation_helper.c  tokenization_node_creation_module.c  tokenization_utils.c  utils.c
src/utils/: cursor.c  dublicate_shell_env.c  env_var_parser.c  error.c  formatters.c  ft_error.c  ft_freexit.c  ft_input.c  ft_isoperator.c  ft_report_error.c  ft_signal_handler.c  ft_space_correctiion_utils3.c  ft_space_correction.c  ft_space_correction_helper.c  ft_space_correction_helper_2.c  ft_space_correction_utils.c  ft_space_correction_utils2.c  ft_tokendelone.c  ft_utils.c  insert_env.c  signal_handler.c  signals.c  strtoi.c  term_config.c
